--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   deploy:
     name: EC2 Deployment
-    runs-on: self-hosted  # Runs directly on EC2 instead of GitHub's hosted runner
+    runs-on: self-hosted
 
     steps:
       - name: Checkout Code
