--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,4 +35,5 @@ jobs:
 
       - name: Start FastAPI application
         run: |
+          cd fastapi-app
           nohup uvicorn main:app --host 0.0.0.0 --port 8000 --reload > uvicorn.log 2>&1 &
